Name:		hasqlator-postgresql
Version: 	0.0.1
Synopsis:	composable SQL generation
Category: 	Database
Copyright: 	Kristof Bastiaensen (2021)
Stability:	Unstable
License:	BSD3
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Bug-Reports: 	https://github.com/kuribas/hasqlator-postgresql/issues
Build-type:	Simple
Cabal-version:	>=1.10
Description:  A simple but expressive applicative SQL generation library for postgresql
              .
              Haskqlator is a simple but expressive SQL generation library.  Instead of
              matching haskell records to SQL, or using complicate type level computations
              to encode a schema in haskell, it uses a simple applicative interface to
              convert between SQL and haskell.  The produced SQL matches exactly the SQL
              written by the user.  An addition layer is provided to encode database schemas
              as haskell values, and give more type safety, but with little added complexity.
 
source-repository head
  type:		git
  location:	https://github.com/kuribas/hasqlator-postgresql


Library
  Ghc-options: -Wall
  default-language: Haskell2010
  Build-depends: base >= 3 && < 5,
                 mtl >= 2.1.3,
                 postgresql-libpq,
                 postgresql-binary,
                 text,
                 bytestring,
                 bytestring-strict-builder,
                 time,
                 dlist,
                 scientific,
                 binary,
                 dlist,
                 containers,
                 unordered-containers
  hs-source-dirs:
    src                 
  Exposed-Modules:
    Database.PostgreSQL.Hasqlator
    Database.PostgreSQL.Hasqlator.Typed

                
